koomgr/config/ingress/nodeport.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: external-service
  namespace: system
spec:
  type: NodePort
  ports:
    - port: 444
      targetPort: 8444
      protocol: TCP
      nodePort: 31444
  selector:
    control-plane: koobind-manager
